Fix 0101 opacity being too low

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,7 +52,7 @@ img,
   z-index: -1;
   width: 100vw;
   word-wrap: break-word;
-  opacity: 0.02;
+  opacity: 0.06;
   font-size: 3rem;
   user-select: none;
 }
